--- a/index.css
+++ b/index.css
@@ -2,41 +2,79 @@ html,
 body {
   margin: 0;
   padding: 0;
-  font-family: "Rubik", sans-serif;
-  background-color: #eef0f4;
+  font-family: "Inter", sans-serif;
+  background-color: #f2f0e6;
+  color: #fbfbfb;
 }
 
 .container {
+  max-width: 380px;
   display: flex;
   flex-direction: column;
-  max-width: 320px;
+  row-gap: 20px;
   margin: 30px auto;
 }
 
-img {
-  width: 150px;
-  margin: 0 auto;
+h1 {
+  font-size: 45px;
+  font-family: "Martian Mono", serif;
+  margin: 0;
+  text-align: center;
+  display: block;
+  color: #2c362b;
 }
 
-input {
-  color: #432000;
-  background-color: #dce1eb;
-  border: 0;
+.field {
+  display: flex;
+  column-gap: 10px;
+}
+
+input[type="text"] {
+  background-color: #6c3932;
+  font-size: 25px;
   padding: 15px;
-  border-radius: 8px;
-  font-size: 20px;
+  border: 0;
+  border-radius: 10px;
   text-align: center;
-  font-family: "Rubik", sans-serif;
-  margin: 10px 0;
+  font-family: "Inter", sans-serif;
+  width: 100%;
+  color: #fbfbfb;
+}
+
+input[type="text"]::placeholder {
+  color: #371f1b;
 }
 
 button {
-  color: #fdfdfd;
-  background-color: #ac485a;
-  border: 0;
+  background-color: #a57042;
+  color: #260f0f;
+  font-size: 25px;
   padding: 15px;
-  border-radius: 8px;
-  font-size: 20px;
+  border: 0;
+  border-radius: 10px;
+  width: 70px;
+}
+
+button:hover {
+  cursor: pointer;
+  background-color: #d3945d;
+}
+
+ul {
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 15px;
   text-align: center;
-  font-family: "Rubik", sans-serif;
+}
+
+li {
+  list-style: none;
+  background-color: #2c362b;
+  font-size: 18px;
+  padding: 15px;
+  height: 120px;
+  width: 40%;
+  text-align: left;
 }
