--- a/index.css
+++ b/index.css
@@ -40,3 +40,23 @@ button {
   text-align: center;
   font-family: "Rubik", sans-serif;
 }
+
+ul {
+  margin: 16px 0;
+  padding: 0;
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 8px;
+}
+
+ul li {
+  background-color: #fffdf8;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
+  font-size: 20px;
+  flex-grow: 1;
+  border-radius: 8px;
+  padding: 16px 24px;
+  text-align: center;
+}
