--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@ body {
   padding: 0;
   font-family: "Rubik", sans-serif;
   background-color: #eef0f4;
+  color: #432000;
 }
 
 .container {
@@ -41,6 +42,12 @@ button {
   font-family: "Rubik", sans-serif;
 }
 
+button:active,
+button:hover {
+  background-color: #432000;
+  cursor: pointer;
+}
+
 ul {
   margin: 16px 0;
   padding: 0;
@@ -59,4 +66,10 @@ ul li {
   border-radius: 8px;
   padding: 16px 24px;
   text-align: center;
+}
+
+ul li:active,
+ul li:hover {
+  background-color: #ffecc7;
+  cursor: pointer;
 }
