--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@ body {
   font-family: "Rubik", sans-serif;
   background-color: #eef0f4;
   color: #432000;
+  user-select: none;
 }
 
 .container {
@@ -12,6 +13,9 @@ body {
   flex-direction: column;
   max-width: 320px;
   margin: 30px auto;
+  padding: 36px;
+  border: solid 2px #432000;
+  border-radius: 8px;
 }
 
 img {
