--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ body {
   padding: 0;
   font-family: "Rubik", sans-serif;
   background-color: #eef0f4;
-  color: #432000;
+  color: #3d1f1f;
   user-select: none;
 }
 
@@ -14,8 +14,9 @@ body {
   max-width: 320px;
   margin: 30px auto;
   padding: 36px;
-  border: solid 2px #432000;
+  /* border: solid 1px #cc6666; */
   border-radius: 8px;
+  box-shadow: 0px 0px 4px 5px rgba(204, 102, 102, 0.1);
 }
 
 img {
@@ -24,31 +25,37 @@ img {
 }
 
 input {
-  color: #432000;
-  background-color: #dce1eb;
+  color: #3d1f1f;
+  background-color: #f5e0e0;
   border: 0;
   padding: 15px;
   border-radius: 8px;
   font-size: 20px;
+  font-weight: 300;
   text-align: center;
   font-family: "Rubik", sans-serif;
   margin: 10px 0;
 }
 
+input::placeholder {
+  color: #d17575;
+}
+
 button {
   color: #fdfdfd;
-  background-color: #ac485a;
+  background-color: #cc6666;
   border: 0;
   padding: 15px;
   border-radius: 8px;
   font-size: 20px;
+  font-weight: 600;
   text-align: center;
   font-family: "Rubik", sans-serif;
 }
 
 button:active,
 button:hover {
-  background-color: #432000;
+  background-color: #8f4747;
   cursor: pointer;
 }
 
@@ -63,7 +70,7 @@ ul {
 }
 
 ul li {
-  background-color: #fffdf8;
+  background-color: #faf0f0;
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
   font-size: 20px;
   flex-grow: 1;
@@ -74,6 +81,6 @@ ul li {
 
 ul li:active,
 ul li:hover {
-  background-color: #ffecc7;
+  background-color: #f0d1d1;
   cursor: pointer;
 }
