--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@ body {
   display: flex;
   flex-direction: column;
   max-width: 320px;
-  margin: 60px auto;
+  margin: 10% auto;
   padding: 36px;
   /* border: solid 1px #cc6666; */
   border-radius: 8px;
