--- a/index.css
+++ b/index.css
@@ -30,6 +30,7 @@ input {
   border: 0;
   padding: 15px;
   border-radius: 8px;
+  box-shadow: 0px 0px 3px 1px rgba(204, 102, 102, 0.2);
   font-size: 20px;
   font-weight: 300;
   text-align: center;
