--- a/index.css
+++ b/index.css
@@ -14,9 +14,9 @@ body {
   max-width: 320px;
   margin: 10% auto;
   padding: 36px;
-  /* border: solid 1px #cc6666; */
+  border: solid 2px #663333;
   border-radius: 8px;
-  box-shadow: 0px 0px 4px 5px rgba(204, 102, 102, 0.1);
+  box-shadow: 8px 16px 16px 8px rgba(102, 51, 51, 0.1);
 }
 
 img {
@@ -26,11 +26,11 @@ img {
 
 input {
   color: #3d1f1f;
-  background-color: #f5e0e0;
+  background-color: #f0d1d1;
   border: 0;
   padding: 15px;
   border-radius: 8px;
-  box-shadow: 0px 0px 3px 1px rgba(204, 102, 102, 0.2);
+  box-shadow: 2px 4px 4px 1px rgba(102, 51, 51, 0.1);
   font-size: 20px;
   font-weight: 300;
   text-align: center;
@@ -40,6 +40,11 @@ input {
 
 input::placeholder {
   color: #d17575;
+}
+
+*:focus {
+  outline: none;
+  box-shadow: 0 0 0 4px rgb(209, 117, 117, 0.6);
 }
 
 button {
@@ -52,6 +57,7 @@ button {
   font-weight: 600;
   text-align: center;
   font-family: "Rubik", sans-serif;
+  box-shadow: 2px 4px 4px 1px rgba(102, 51, 51, 0.1);
 }
 
 button:active,
@@ -72,7 +78,7 @@ ul {
 
 ul li {
   background-color: #faf0f0;
-  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
+  box-shadow: 2px 4px 4px 1px rgba(102, 51, 51, 0.1);
   font-size: 20px;
   flex-grow: 1;
   border-radius: 8px;
