--- a/index.css
+++ b/index.css
@@ -6,17 +6,26 @@ body {
   background-color: #eef0f4;
   color: #3d1f1f;
   user-select: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .container {
   display: flex;
   flex-direction: column;
-  max-width: 320px;
-  margin: 10% auto;
+  margin-top: 96px;
+  max-width: 360px;
   padding: 36px;
   border: solid 2px #663333;
   border-radius: 8px;
   box-shadow: 8px 16px 16px 8px rgba(102, 51, 51, 0.1);
+}
+
+.primary-heading {
+  font-size: 36px;
+  text-align: center;
+  cursor: pointer;
 }
 
 img {
@@ -90,4 +99,44 @@ ul li:active,
 ul li:hover {
   background-color: #f0d1d1;
   cursor: pointer;
+}
+
+button,
+input,
+ul li {
+  transition: all 0.3s ease;
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    width: 80%;
+    padding: 8px 16px;
+    border: none;
+    border-radius: 0%;
+    box-shadow: none;
+    margin-top: 32px;
+  }
+
+  input {
+    padding: 16px 24px;
+    font-size: 16px;
+    font-weight: 300;
+  }
+
+  button {
+    padding: 16px 24px;
+    font-size: 16px;
+    font-weight: 600;
+  }
+
+  ul {
+    margin-top: 24px;
+  }
+
+  ul li {
+    font-size: 16px;
+    flex-grow: 1;
+    padding: 16px 24px;
+    text-align: center;
+  }
 }
